added a better template and styled the welcome page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,19 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4 text-light">Welcome To <span class="text-info">SuppliChain</span></h1>
+    <p class="text-light">Your comprehensive solution for managing business inventory effortlessly.</p>
+    @* <p class="text-light">Start by going to the navigation bar and select either recieve inventory or dispatch
+        inventory, depending on what you want to do.</p> *@
+    <br>
+    <br>
+    <p class="text-light">Start by using the navigation bar to choose the action you need:</p>
+    <ul style="list-style-type: none;">
+        <li class="text-light"><strong>Receive Inventory</strong>: Record incoming stock and update your
+            inventory.
+        </li>
+        <li class="text-light"><strong>Dispatch Inventory</strong>: Track outgoing items and adjust stock
+            levels.
+        </li>
+    </ul>
 </div>
