--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,16 +5,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - SuppliChain</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-slate.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SuppliChain.styles.css" asp-append-version="true" />
 </head>
 
-<body>
+<body class="bg-primary">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SuppliChain</a>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
+            <div class="container-fluid" style="padding-left: 0;">
+                <a class="navbar-brand text-light bg-info" asp-area="" asp-controller="Home"
+                    asp-action="Index">SuppliChain</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,23 +25,24 @@
                         @if (ViewBag.HideLinks == null || !(bool)ViewBag.HideLinks)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="In">Receive
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="In">Receive
                                     Inventory</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Out">Dispatch
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Out">Dispatch
                                     Inventory</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Admin</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home"
+                                    asp-action="Admin">Admin</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home"
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home"
                                     asp-action="Privacy">Privacy</a>
                             </li>
                             @* <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
                         </li> *@
                         }
                     </ul>
@@ -55,8 +57,9 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - SuppliChain - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container text-light">
+            &copy; 2024 - SuppliChain - <a asp-area="" asp-controller="Home" asp-action="Privacy"
+                class="text-info">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
