--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,20 +32,25 @@
                                 <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Out">Dispatch
                                     Inventory</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Home"
-                                    asp-action="Admin">Admin</a>
-                            </li>
-
+                            @if (ViewBag.IsAdmin == true)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Home"
+                                        asp-action="Admin">Admin</a>
+                                </li>
+                            }
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Home"
                                     asp-action="Privacy">Privacy</a>
                             </li>
-                            @* <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
-                        </li> *@
                         }
                     </ul>
+                    @if (ViewBag.HideLinks == null || !(bool)ViewBag.HideLinks)
+                    {
+                        <span class="navbar-text text-light">
+                            Logged in as: @ViewBag.UserName
+                        </span>
+                    }
                 </div>
             </div>
         </nav>
