--- a/Views/Home/In.cshtml
+++ b/Views/Home/In.cshtml
@@ -3,5 +3,62 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">In</h1>
+    <h1 class="display-4" style="padding-bottom: 20px;">Receive Inventory</h1>
+    @if (ViewBag.Message != null)
+    {
+        <div class="alert alert-info">
+            @ViewBag.Message
+        </div>
+        ViewBag.Message = "";
+    }
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-4">
+                @using (Html.BeginForm("AddItemToDB", "Home", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    <label for="itemId">Item ID</label>
+                    <input type="number" class="form-control text-center" id="itemId" aria-describedby="itemIdHelp"
+                        placeholder="Enter item ID" name="itmID">
+                    <label for="numToAdd">Number to Add</label>
+                    <input type="number" class="form-control text-center" id="numToAdd" aria-describedby="numToAddHelp"
+                        placeholder="Enter number to add" name="Count">
+                    <button type="submit" class="btn btn-primary" style="margin: 5px;">Add</button>
+                }
+            </div>
+            <div class="col-8" style="height: 65vh; overflow-y: auto; padding-top: 23px;">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">Item Name</th>
+                            <th scope="col">Item ID</th>
+                            <th scope="col">Num Count</th>
+                        </tr>
+                    </thead>
+                    <tbody id="itemList">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        $(document).ready(function ()
+        {
+
+            $.ajax({
+                url: '/Home/GetInDB',
+                method: 'POST',
+                success: function (data)
+                {
+                    console.log(data);
+                    data.forEach(function (item)
+                    {
+                        // Append each item to the table with id 'itemList'
+                        $('#itemList').append('<tr><td>' + item.itemName + '</td><td>' + item.itemId + '</td><td>' + item.count + '</td></tr>');
+                    });
+                }
+            });
+        });
+    </script>
 </div>
