--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -5,21 +5,26 @@
 }
 
 <div class="text-center">
-
-
     <h1 class="display-4">Login</h1>
-    @using (Html.BeginForm("Login", "Login", FormMethod.Post))
+    @if (Model != null && Model.ErrorName != "")
     {
-        <label for="username">Username:</label>
-        <input type="text" name="username" placeholder="Username" />
-        <label for="password">Password:</label>
-        <input type="password" name="password" placeholder="Password" />
-        <button type="submit" name="action" value="Login">Login</button>
-        <button type="submit" name="action" value="Register">Register</button>
-    }
-    @if (Model != null && Model.ErrorName == "ERROR")
-    {
-        <h1 class="display-8" style="color:red">@Model.ErrorName</h1>
+        <div class="alert alert-info mx-auto" style="width: 35vw">
+            @Model.ErrorName
+        </div>
         Model.ErrorName = "";
     }
+
+    @using (Html.BeginForm("Login", "Login", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
+        <label for="username">Username:</label>
+        <input class="form-control text-center mx-auto" style="width: 35vw" type="text" name="username"
+            placeholder="Username" />
+        <label for="password">Password:</label>
+        <input class="form-control text-center mx-auto" style="width: 35vw" type="password" name="password"
+            placeholder="Password" />
+        <button class="btn btn-primary" type="submit" name="action" value="Login">Login</button>
+        <button class="btn btn-primary" style="margin: 5px;" type="submit" name="action" value="Register">Register</button>
+    }
+
 </div>
