added a logged in check on every serve of any page

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                     @if (ViewBag.HideLinks == null || !(bool)ViewBag.HideLinks)
                     {
                         <span class="nav-link text-light" style="cursor: default;">Logged in as: @ViewBag.UserName</span>
-                        <a class="nav-link text-light" asp-controller="Login" asp-action="Logout">Logout</a>
+                        <a class="nav-link text-light" asp-controller="Login" asp-action="Logout" onclick="Logout()">Logout</a>
                     }
                 </div>
             </div>
