polished some ui. added content on admin page. working in/out. better email checks for registring.

--- a/Views/Home/NewItem.cshtml
+++ b/Views/Home/NewItem.cshtml
@@ -1,9 +1,9 @@
 @{
-    ViewData["Title"] = "Out Page";
+    ViewData["Title"] = "New Item";
 }
 
 <div class="text-center">
-    <h1 class="display-4" style="padding-bottom: 20px;">Add Item to DB</h1>
+    <h1 class="display-4" style="padding-bottom: 20px;">Add an Item to the DB</h1>
     @if (ViewBag.Message != null)
     {
         <div class="alert alert-info">
