--- a/Views/Home/Admin.cshtml
+++ b/Views/Home/Admin.cshtml
@@ -3,5 +3,88 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Admin</h1>
+    <h1 class="display-4" style="padding-bottom: 20px;">View Full DB</h1>
+    @if (ViewBag.Message != null)
+    {
+        <div class="alert alert-info">
+            @ViewBag.Message
+        </div>
+        ViewBag.Message = "";
+    }
+    <div style="text-align: center;">
+        <button type="button" class="btn btn-primary"
+            onclick="$('#itemListParent').show();$('#userListParent').hide()">Items</button>
+        <button type="button" class="btn btn-primary"
+            onclick="$('#userListParent').show();$('#itemListParent').hide()">Users</button>
+    </div>
+    <div class="container-fluid" id="itemListParent">
+        <div style="height: 65vh; overflow-y: auto; padding-top: 23px;">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">Item ID</th>
+                        <th scope="col">Item Name</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Category</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Stock</th>
+                    </tr>
+                </thead>
+                <tbody id="itemList">
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="container-fluid" style="display: none;" id="userListParent">
+        <div style="height: 65vh; overflow-y: auto; padding-top: 23px;">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">User ID</th>
+                        <th scope="col">Username</th>
+                        <th scope="col">Role</th>
+                        <th scope="col">Email</th>
+                    </tr>
+                </thead>
+                <tbody id="userList">
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+
+    <script>
+        $(document).ready(function ()
+        {
+            //for items
+            $.ajax({
+                url: '/Home/GetAdminItems',
+                method: 'POST',
+                success: function (data)
+                {
+                    data.forEach(function (item)
+                    {
+                        console.log(data);
+                        // Append each item to the table with id 'itemList'
+                        $('#itemList').append('<tr><td>' + item.id + '</td><td>' + item.name + '</td><td>' + item.descripton + '</td><td>' + item.category + '</td><td>' + item.price + '</td><td>' + item.stock + '</td></tr>');
+                    });
+                }
+            });
+
+            //for users
+            $.ajax({
+                url: '/Home/GetAdminUsers',
+                method: 'POST',
+                success: function (data)
+                {
+                    data.forEach(function (user)
+                    {
+                        console.log(data);
+                        // Append each item to the table with id 'itemList'
+                        $('#userList').append('<tr><td>' + user.id + '</td><td>' + user.name + '</td><td>' + user.role + '</td><td>' + user.email + '</td></tr>');
+                    });
+                }
+            });
+        });
+    </script>
 </div>
